# PFEM

./: .gitignore  .travis.yml  CMakeLists.txt
CMake/: FindMKL.cmake
examples/2D/ballInFluid/: ballInFluidComp.lua  ballInFluidIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/conduction/: conductionIncomp.lua  geometry.geo  testIncomp.lua
examples/2D/coolingBallInFluid/: coolingBallInFluidComp.lua  coolingBallInFluidIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/cylinder/: cylinderComp.lua  cylinderIncomp.lua  geometry.geo  geometry2.geo  testIncomp.lua
examples/2D/damBreakKoshizuka/: damBreakKoshizukaComp.lua  damBreakKoshizukaIncomp.lua  geometry.geo  testComp.lua  testIncomp.lua  twoBoxes.geo
examples/2D/damBreakWithObstacle/: damBreakWithObstacleComp.lua  damBreakWithObstacleIncomp.lua  geometry.geo  testComp.lua  testIncomp.lua
examples/2D/dbDellaVecchia/: dbDellaVecchiaIncomp.lua  geometry.geo
examples/2D/dropFall/: dropFallComp.lua  dropFallIncomp.lua  geometry.geo  testComp.lua  testIncomp.lua
examples/2D/dropFallInFluid/: dropFallInFluidComp.lua  dropFallInFluidIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/hydrostatic/: hydrostaticComp.lua  hydrostaticIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/phaseChange/: geometry.geo  geometry2.geo  testComp.lua  testIncomp.lua
examples/2D/pipe/: geometry.geo  paramsIncomp.json  piepIncomp.lua  pipeComp.lua  testComp.lua  testIncomp.lua
examples/2D/rayleigh/: geometry2.geo  rayleighComp.lua  rayleighIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/sloshing/: sloshingComp.lua  sloshingIncomp.lua  testComp.lua  testIncomp.lua
examples/2D/squareToDisk/: geometry.geo  geometry2.geo  geometry3.geo  squareToDiskComp.lua  squareToDiskIncomp.lua  testIncomp.lua
examples/2D/thermalConv/: testComp.lua  testIncomp.lua  thermalConvComp.lua  thermalConvIncomp.lua
examples/3D/cubeToSphere/: cubeToSphereComp.lua  cubeToSphereIncomp.lua  geometry.geo  testIncomp.lua
examples/3D/damBreakKoshizuka/: damBreakKoshizuka3DComp.lua  damBreakKoshizuka3DIncomp.lua  testComp.lua  testIncomp.lua
examples/3D/damBreakWithObstacle/: damBreakWithObstacle3DComp.lua  damBreakWithObstacle3DIncomp.lua  geometry.geo  testComp.lua  testIncomp.lua
examples/3D/dropFallInFluid/: dropFallInFluid3DComp.lua  dropFallInFluid3DIncomp.lua  geometry.geo  testComp.lua  testIncomp.lua
examples/3D/pipe/: geometry.geo  pipe3DComp.lua  pipe3DIncomp.lua  testComp.lua  testIncomp.lua
examples/3D/rayleigh/: geometry2.geo  (+4 more)
run/DRAGON2/: compile.sh
run/Fabulous/: compile.sh
run/linux/: genCBproject.sh
run/macOS/: genCBproject.sh
run/windows/: buildCGAL_MSYS2.sh  genCBprojectMSYS2.sh
srcs/: CMakeLists.txt  main.cpp
srcs/mesh/: CMakeLists.txt  Element.cpp  Element.hpp  Element.inl  Facet.cpp  Facet.hpp  Facet.inl  Mesh.cpp  Mesh.hpp  Mesh.inl  Mesh2D.cpp  Mesh3D.cpp  Node.hpp  Node.inl
srcs/simulation/: CMakeLists.txt  Equation.cpp  Equation.hpp  Problem.cpp  Problem.hpp  Solver.cpp  Solver.hpp  Solver.inl
srcs/simulation/extractors/: Extractor.cpp  Extractor.hpp  GMSHExtractor.cpp  GMSHExtractor.hpp  MassExtractor.cpp  MassExtractor.hpp  MinMaxExtractor.cpp  MinMaxExtractor.hpp  PointExtractor.cpp  PointExtractor.hpp
srcs/simulation/matricesBuilder/: MatricesBuilder.cpp  MatricesBuilder.hpp  MatricesBuilder.inl
srcs/simulation/meshSmoother/: GETMe.hpp  GETMe.inl  MeshSmoother.hpp  PSmoother.hpp  PSmoother.inl
srcs/simulation/nonLinearAlgo/: NonLinearAlgo.cpp  NonLinearAlgo.hpp  PicardAlgo.cpp  PicardAlgo.hpp
srcs/simulation/physics/IncompNewton/: HeatEquation.cpp  HeatEquation.hpp  HeatEquation.inl  MomContEquation.cpp  MomContEquation.hpp  MomContEquation.inl  MomContEquationFracStep.cpp  MomContEquationFracStep.inl  MomContEquationPSPG.cpp  MomContEquationPSPG.inl  Problem.cpp  Solver.cpp  Solver.hpp
srcs/simulation/physics/WCompNewton/: ContEquation.cpp  ContEquation.hpp  ContEquation.inl  HeatEquation.cpp  HeatEquation.hpp  HeatEquation.inl  MomEquation.cpp  MomEquation.hpp  MomEquation.inl  Problem.cpp  Solver.cpp  Solver.hpp
srcs/simulation/utility/: Clock.hpp  SignalHandler.h  SolTable.hpp  StatesFromToQ.hpp
srcs/solver/: CMakeLists.txt  Solver.cpp
(+2 files in other folders)
